[workspace]
resolver = "3"
members = ["projects/*"]

[workspace.dependencies]
# ranim = { git = "https://github.com/AzurIce/ranim", rev = "aabc0d5" }
ranim = { path = "../ranim" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
